# user-accounts

./: AUTHORS  Makefile.am  NEWS  README  configure.ac
data/: Makefile.am  account-dialog.ui  account-fingerprint.ui  password-dialog.ui  user-accounts-dialog.ui  user-accounts.desktop.in.in
data/faces/: .directory
data/icons/: .directory  Makefile.am
po/: POTFILES.in  POTFILES.skip  af.po  an.po  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  da.po  de.po  el.po  en.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  is.po  it.po  ja.po  (+40 more)
src/: Makefile.am  cc-crop-area.c  um-account-dialog.c  um-cell-renderer-user-image.c  um-editable-button.c  um-fingerprint-dialog.c  um-history-dialog.c  um-password-dialog.c  um-photo-dialog.c  um-realm-manager.c  um-realm-manager.h  um-user-image.c  um-user-panel.c  um-user-panel.h  um-utils.c  um-utils.h
