NULL =

icondir = $(pkgdatadir)/icons

icon_DATA = 			\
	left-index-finger.png	\
	left-little-finger.png	\
	left-middle-finger.png	\
	left-ring-finger.png	\
	left-thumb.png		\
	print_error.png		\
	print_ok.png		\
	right-index-finger.png	\
	right-little-finger.png	\
	right-middle-finger.png	\
	right-ring-finger.png	\
	right-thumb.png		\
	$(NULL)

EXTRA_DIST = \
	     $(image_DATA)

-include $(top_srcdir)/git.mk
